--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ before_install:
   - conda update --yes conda
   - conda install --yes psutil yaml pyyaml
   - conda-env create -f gds_py/gds_py.yml
+  - source activate gds
+  - pip install gds_py/pip_libs.txt
 
 script: 
   - source activate gds
