--- a/gds_py/gds_py.yml
+++ b/gds_py/gds_py.yml
@@ -10,58 +10,58 @@ dependencies:
   - jupyterhub=1.1.0
   - notebook=6.0.3
   - jupyterlab=2.1.3
-  - dask-ml
-  - ipyleaflet
-  - pygeos
-  - spatialpandas
-  - ipympl
-  - legendgram
-  - rioxarray
-  - psycopg2
-  - pyarrow
-  - black
-  - geopy
-  - jupytext
-  - pandana
-  - momepy
-  - mkl-service
-  - xlrd
-  - osmnx
-  - cython
-  - xarray-spatial
-  - scikit-image
-  - hdbscan
-  - feather-format
-  - networkx
-  - netcdf4
-  - bokeh
-  - h3-py
-  - rio-cogeo
-  - pysal
-  - tabulate
-  - rasterstats
-  - bottleneck
-  - jupyter-server-proxy
-  - seaborn
-  - xlsxwriter
-  - statsmodels
-  - datashader
-  - scikit-learn
-  - cenpy
-  - nbdime
-  - polyline
-  - ipywidgets
-  - flake8
-  - contextily
-  - geopandas
-  - palettable
-  - ipyparallel
-  - sqlalchemy
-  - boto3
-  - qgrid
-  - pyrosm
-  - xarray_leaflet
-  - rasterio
-  - dask
+  - dask-ml=1.6.0
+  - ipyleaflet=0.13.3
+  - pygeos=0.7.1
+  - spatialpandas=0.3.5
+  - ipympl=0.5.7
+  - legendgram=0.0.3
+  - rioxarray=0.0.31
+  - psycopg2=2.8.5
+  - pyarrow=1.0.0
+  - black=19.10b0
+  - geopy=2.0.0
+  - jupytext=1.5.2
+  - pandana=0.5
+  - momepy=0.3.0
+  - mkl-service=2.3.0
+  - xlrd=1.2.0
+  - osmnx=0.15.1
+  - cython=0.29.21
+  - xarray-spatial=0.0.6
+  - scikit-image=0.17.2
+  - hdbscan=0.8.26
+  - feather-format=0.4.1
+  - networkx=2.4
+  - netcdf4=1.5.4
+  - bokeh=2.1.1
+  - h3-py=3.6.4
+  - rio-cogeo=1.1.10
+  - pysal=2.3.0
+  - tabulate=0.8.7
+  - rasterstats=0.14.0
+  - bottleneck=1.3.2
+  - jupyter-server-proxy=1.5.0
+  - seaborn=0.10.1
+  - xlsxwriter=1.3.0
+  - statsmodels=0.11.1
+  - datashader=0.11.0
+  - scikit-learn=0.23.1
+  - cenpy=1.0.0.post4
+  - nbdime=2.0.0
+  - polyline=1.4.0
+  - ipywidgets=7.5.1
+  - flake8=3.8.3
+  - contextily=1.0.0
+  - geopandas=0.8.1
+  - palettable=3.3.0
+  - ipyparallel=6.3.0
+  - sqlalchemy=1.3.18
+  - boto3=1.14.31
+  - qgrid=1.3.1
+  - pyrosm=0.5.2
+  - xarray_leaflet=0.1.10
+  - rasterio=1.1.5
+  - dask=2.21.0
 gds_env_version: 5.0 - tini=0.18.0
 
