Add version env variable + Update check

--- a/gds_py/Dockerfile
+++ b/gds_py/Dockerfile
@@ -140,3 +140,6 @@ RUN apt-get update \
 # Switch back to user to avoid accidental container runs as root
 USER $NB_UID
 
+# Set version
+ENV GDS_ENV_VERSION "6.0alpha"
+
