--- a/gds/Dockerfile
+++ b/gds/Dockerfile
@@ -12,186 +12,17 @@ RUN echo ${PATH}
 ENV PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 RUN echo ${PATH}
 
-#--- Utilities ---#
+# Install R + Tidyverse + Geospatial
+ADD ./install_R_stack.sh $HOME/install_R_stack.sh
+RUN chmod +x $HOME/install_R_stack.sh \
+ && $HOME/install_R_stack.sh \
+ && rm $HOME/install_R_stack.sh
 
-RUN  apt-get update -qq \
-  && apt-get install -y --no-install-recommends software-properties-common \
-  && add-apt-repository -y ppa:ubuntugis/ubuntugis-experimental \
-  && apt-get update -qq \
-  && apt-get install -y --no-install-recommends \
-    # General
-    # https://github.com/rocker-org/rocker-versioned2/blob/538743fcf4940b03d22e1625c7024b3304244ca2/scripts/install_R_ppa.sh
-    ca-certificates \
-    less \
-    libopenblas-base \
-    locales \
-    dirmngr \
-    gpg \
-    gpg-agent \
-    # TidyVerse
-    # https://github.com/rocker-org/rocker-versioned2/blob/538743fcf4940b03d22e1625c7024b3304244ca2/scripts/install_tidyverse.sh
-    libxml2-dev \
-    libcairo2-dev \
-    libgit2-dev \
-    default-libmysqlclient-dev \
-    libpq-dev \
-    libsasl2-dev \
-    libsqlite3-dev \
-    libssh2-1-dev \
-    unixodbc-dev \
-    # ---------
-    # Geospatial
-    # https://github.com/rocker-org/rocker-versioned2/blob/65309d4d9dac11d3a78dd26ee4bf7b715436db31/scripts/install_geospatial.sh
-    lbzip2 \
-    libfftw3-dev \
-    libgdal-dev \
-    libgeos-dev \
-    libgsl0-dev \
-    libgl1-mesa-dev \
-    libglu1-mesa-dev \
-    libhdf4-alt-dev \
-    libhdf5-dev \
-    libjq-dev \
-    libpq-dev \
-    libproj-dev \
-    libprotobuf-dev \
-    libnetcdf-dev \
-    libsqlite3-dev \
-    libssl-dev \
-    libudunits2-dev \
-    lsb-release \
-    netcdf-bin \
-    postgis \
-    protobuf-compiler \
-    sqlite3 \
-    tk-dev \
-    unixodbc-dev \
-    # ---------
-    # Other
-    gpg-agent \
-    jq \
-    libatk1.0-0 \
-    liblwgeom-dev \
-    libv8-3.14-dev \
-    libx11-6 \
-    libxtst6 \
-    wget \
-    # ---------
- && apt-get autoclean \
- && apt-get autoremove \
- && apt-get clean \
- && rm -rf /var/lib/apt/lists/*
-
-#--- R ---#
-# https://github.com/rocker-org/rocker-versioned/blob/master/r-ver/Dockerfile
-# Look at: http://sites.psu.edu/theubunturblog/installing-r-in-ubuntu/
-
-RUN echo "deb https://cloud.r-project.org/bin/linux/ubuntu bionic-cran40/" >> /etc/apt/sources.list \
- && sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E298A3A825C0D65DFD57CBB651716619E084DAB9 \
- && apt-get update \
- && apt-get install -y \
-    r-base \
-    r-base-dev \
- && apt-get autoclean \
- && apt-get autoremove \
- && apt-get clean \
- && rm -rf /var/lib/apt/lists/*
-
-RUN R -e "install.packages(c( \
-            # ------------------
-            # TidyVerse
-            # https://github.com/rocker-org/rocker-versioned2/blob/538743fcf4940b03d22e1625c7024b3304244ca2/scripts/install_tidyverse.sh
-            'BiocManager', \
-            'devtools', \
-            'rmarkdown', \
-            'tidyverse', \
-            'vroom', \
-            'gert', \
-            # ---------
-            'arrow', \
-            'dbplyr', \
-            'DBI', \
-            'dtplyr', \
-            'RMariaDB', \
-            'RPostgres', \
-            'RSQLite', \
-            'fst', \
-            # ------------------
-            # Geospatial
-            # https://github.com/rocker-org/rocker-versioned2/blob/65309d4d9dac11d3a78dd26ee4bf7b715436db31/scripts/install_geospatial.sh
-            'RColorBrewer', \
-            'Randomfields', \
-            'RNetCDF', \
-            'classInt', \
-            'deldir', \
-            'gstat', \
-            'hdf5r', \
-            'lidR', \
-            'mapdata', \
-            'maptools', \
-            'mapview', \
-            'ncdf4', \
-            'proj4', \
-            'raster', \
-            'rgdal', \
-            'rgeos', \
-            'rlas', \
-            'sf', \
-            'sp', \
-            'spacetime', \
-            'spatstat', \
-            'spatialreg', \
-            'spdep', \
-            'stars', \
-            'tidync', \
-            'tmap', \
-            'geoR', \
-            'geosphere', \
-            # ------------------
-            # SAN
-            # https://github.com/GDSL-UL/san/blob/master/01-overview.Rmd
-            'arm', \
-            'car', \
-            'corrplot', \
-            'FRK', \
-            'gghighlight', \
-            'ggmap', \
-            'GISTools', \
-            'jtools', \
-            'kableExtra', \
-            'knitr', \
-            'lme4', \
-            'lmtest', \
-            'lubridate', \
-            'MASS', \
-            'merTools', \
-            'sjPlot', \
-            'spgwr', \
-            'stargazer', \
-            'viridis', \
-            # ------------------
-            # Other
-            'areal', \
-            'deldir', \
-            'feather', \
-            'geojsonio', \
-            'hexbin', \
-            'igraph', \
-            'nlme', \
-            'randomForest', \
-            'RCurl', \
-            'rpostgis', \
-            'shiny', \
-            'splancs', \
-            'TraMineR', \
-            'tufte' \
-            ), repos='https://cran.rstudio.com');" \
-## from bioconductor
-   && R -e "library(BiocManager); \
-            BiocManager::install('rhdf5')" \
-## Geocomputation in R meta-package
-   && R -e "library(devtools); \
-            devtools::install_github('geocompr/geocompkg');"
+# Install R GDS stack
+ADD ./install_R_gds.sh $HOME/install_R_gds.sh
+RUN chmod +x $HOME/install_R_gds.sh \
+ && $HOME/install_R_gds.sh \
+ && rm $HOME/install_R_gds.sh
 
 # Re-attach conda to path
 ENV PATH="/opt/conda/bin:${PATH}"
