--- a/gds_py/gds_py.yml
+++ b/gds_py/gds_py.yml
@@ -1,67 +1,74 @@
 name: gds
 channels:
-  - makepath
   - pyviz
   - conda-forge
   - defaults
 dependencies:
-  - conda
-  - python=3.7
-  - jupyterhub=1.1.0
-  - notebook=6.0.3
-  - jupyterlab=2.1.3
-  - dask-ml=1.6.0
-  - ipyleaflet=0.13.3
-  - pygeos=0.7.1
-  - spatialpandas=0.3.5
-  - ipympl=0.5.7
-  - legendgram=0.0.3
-  - rioxarray=0.0.31
-  - psycopg2=2.8.5
-  - pyarrow=1.0.0
-  - black=19.10b0
-  - geopy=2.0.0
-  - jupytext=1.5.2
-  - pandana=0.5
-  - momepy=0.3.0
-  - mkl-service=2.3.0
-  - xlrd=1.2.0
-  - osmnx=0.15.1
-  - cython=0.29.21
-  - xarray-spatial=0.0.6
-  - scikit-image=0.17.2
-  - hdbscan=0.8.26
-  - feather-format=0.4.1
-  - networkx=2.4
-  - netcdf4=1.5.4
-  - bokeh=2.1.1
-  - h3-py=3.6.4
-  - rio-cogeo=1.1.10
-  - pysal=2.3.0
-  - tabulate=0.8.7
-  - rasterstats=0.14.0
-  - bottleneck=1.3.2
-  - jupyter-server-proxy=1.5.0
-  - seaborn=0.10.1
-  - xlsxwriter=1.3.0
-  - statsmodels=0.11.1
-  - datashader=0.11.0
-  - scikit-learn=0.23.1
-  - cenpy=1.0.0.post4
-  - nbdime=2.0.0
-  - polyline=1.4.0
-  - ipywidgets=7.5.1
-  - flake8=3.8.3
-  - contextily=1.0.0
-  - geopandas=0.8.1
-  - palettable=3.3.0
-  - ipyparallel=6.3.0
-  - sqlalchemy=1.3.18
-  - boto3=1.14.31
-  - qgrid=1.3.1
-  - pyrosm=0.5.2
-  - xarray_leaflet=0.1.10
-  - rasterio=1.1.5
-  - dask=2.21.0
-gds_env_version: 5.0 - tini=0.18.0
-
+  - python=3.8
+  - mamba
+  - conda=4.9.2
+  - pip
+  - bzip2
+  - tini
+  - notebook=6.2.0
+  - jupyterhub=1.3.0
+  - jupyterlab=3.0.9
+  - conda-forge::blas[build=openblas]
+  - black==20.8b1
+  - bokeh==2.3.0
+  - boto3==1.17.7
+  - bottleneck==1.3.2
+  - cenpy==1.0.0.post4
+  - clustergram==0.3.0
+  - contextily==1.1.0
+  - cython==0.29.22
+  - dask==2021.2.0
+  - dask-kubernetes==0.11.0
+  - dask-ml==1.8.0
+  - datashader==0.12.0
+  - feather-format==0.4.1
+  - flake8==3.8.4
+  - geocube==0.0.16
+  - geopandas==0.9.0
+  - geopy==2.1.0
+  - h3-py==3.7.0
+  - hdbscan==0.8.27
+  - intake-stac==0.3.0
+  - ipyleaflet==0.13.6
+  - ipympl==0.6.3
+  - ipyparallel==6.3.0
+  - ipywidgets==7.6.3
+  - jupyter-server-proxy==1.6.0
+  - jupytext==1.10.2
+  - legendgram==0.0.3
+  - lxml==4.6.2
+  - momepy==0.4.3
+  - nbdime==2.1.0
+  - netcdf4==1.5.6
+  - networkx==2.5
+  - osmnx==1.0.1
+  - palettable==3.3.0
+  - pandana==0.6
+  - polyline==1.4.0
+  - psycopg2==2.8.6
+  - pyarrow==3.0.0
+  - pygeos==0.9
+  - pyrosm==0.6.0
+  - pysal==2.3.0
+  - rasterio==1.2.0
+  - rasterstats==0.14.0
+  - rio-cogeo==2.0.1
+  - rioxarray==0.3.1
+  - scikit-image==0.18.1
+  - scikit-learn==0.24.1
+  - seaborn==0.11.1
+  - spatialpandas==0.3.6
+  - sqlalchemy==1.3.23
+  - statsmodels==0.12.2
+  - tabulate==0.8.9
+  - urbanaccess==0.2.2
+  - xarray_leaflet==0.1.13
+  - xarray-spatial==0.1.2
+  - xlrd==2.0.1
+  - xlsxwriter==1.3.7
+gds_env_version: 6.0 - tini=0.18.0
