--- a/gds_py/gds_py.yml
+++ b/gds_py/gds_py.yml
@@ -70,4 +70,4 @@ dependencies:
   - xarray-spatial==0.1.2
   - xlrd==2.0.1
   - xlsxwriter==1.3.7
-gds_env_version: 6.0 - tini=0.18.0
+gds_env_version: 6.0
