Update date of minimal-notebook

--- a/gds_py/Dockerfile
+++ b/gds_py/Dockerfile
@@ -1,4 +1,4 @@
-# March 21st'21
+# March 25th'21
 FROM jupyter/minimal-notebook:3395de4db93a
 
 MAINTAINER Dani Arribas-Bel <D.Arribas-Bel@liverpool.ac.uk>
