--- a/gds_py/gds_py.yml
+++ b/gds_py/gds_py.yml
@@ -9,9 +9,9 @@ dependencies:
   - conda=4.9.2
   - pip
   - bzip2
+  - jupyterlab=3.0.11
   - notebook=6.2.0
   - jupyterhub=1.3.0
-  - jupyterlab=3.0.9
   - conda-forge::blas[build=openblas]
   - black==20.8b1
   - bokeh==2.3.0
@@ -21,12 +21,12 @@ dependencies:
   - clustergram==0.3.0
   - contextily==1.1.0
   - cython==0.29.22
-  - dask==2021.2.0
-  - dask-kubernetes==0.11.0
+  - dask==2021.3.0
+  - dask-kubernetes==2021.3.0
   - dask-ml==1.8.0
-  - datashader==0.12.0
+  - datashader==0.12.1
   - feather-format==0.4.1
-  - flake8==3.8.4
+  - flake8==3.9.0
   - geocube==0.0.16
   - geopandas==0.9.0
   - geopy==2.1.0
@@ -34,27 +34,30 @@ dependencies:
   - hdbscan==0.8.27
   - intake-stac==0.3.0
   - ipyleaflet==0.13.6
-  - ipympl==0.6.3
+  - ipympl==0.7.0
   - ipyparallel==6.3.0
   - ipywidgets==7.6.3
-  - jupyter-server-proxy==1.6.0
-  - jupytext==1.10.2
+  - jupyter-server-proxy==3.0.2
+  - jupyter_bokeh==3.0.0
+  - jupytext==1.10.3
   - legendgram==0.0.3
-  - lxml==4.6.2
+  - lxml==4.6.3
   - momepy==0.4.3
   - nbdime==2.1.0
   - netcdf4==1.5.6
   - networkx==2.5
+  - openpyxl==3.0.7
   - osmnx==1.0.1
   - palettable==3.3.0
-  - pandana==0.6
+  - pandana==0.6.1
   - polyline==1.4.0
   - psycopg2==2.8.6
   - pyarrow==3.0.0
   - pygeos==0.9
+  - pyppeteer==0.0.25
   - pyrosm==0.6.0
   - pysal==2.3.0
-  - rasterio==1.2.0
+  - rasterio==1.2.1
   - rasterstats==0.14.0
   - rio-cogeo==2.0.1
   - rioxarray==0.3.1
@@ -66,8 +69,8 @@ dependencies:
   - statsmodels==0.12.2
   - tabulate==0.8.9
   - urbanaccess==0.2.2
-  - xarray_leaflet==0.1.13
   - xarray-spatial==0.1.2
+  - xarray_leaflet==0.1.13
   - xlrd==2.0.1
   - xlsxwriter==1.3.7
-gds_env_version: 6.0
+gds_env_version: 6.1
