--- a/gds/Dockerfile
+++ b/gds/Dockerfile
@@ -8,9 +8,9 @@ ENV LANG=C.UTF-8 LC_ALL=C.UTF-8
 USER root
 
 # Remove Conda from path to not interfere with R install
-#RUN echo ${PATH}
-#ENV PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
-#RUN echo ${PATH}
+RUN echo ${PATH}
+ENV PATH="/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
+RUN echo ${PATH}
 
 # Install R + Tidyverse + Geospatial
 ADD ./install_R_stack.sh $HOME/install_R_stack.sh
@@ -25,7 +25,7 @@ RUN chmod +x $HOME/install_R_gds.sh \
  && rm $HOME/install_R_gds.sh
 
 # Re-attach conda to path
-#ENV PATH="/opt/conda/bin:${PATH}"
+ENV PATH="/opt/conda/bin:${PATH}"
 
 #--- R/Python ---#
 
