--- a/gds_py/Dockerfile
+++ b/gds_py/Dockerfile
@@ -44,7 +44,6 @@ RUN conda install --freeze-installed --yes mamba \
      'jupytext' \
      'legendgram' \
      'lxml' \
-     'momepy' \
      'nbdime' \
      'netCDF4' \
      'networkx' \
@@ -63,22 +62,24 @@ RUN conda install --freeze-installed --yes mamba \
      ##############################
      # PySAL fix for https://github.com/pysal/pysal/issues/1234
      #'pysal==2.5' 
-     'libpysal==4.3.0' \
-     'access==1.1.1' \
-     'esda==2.3.1' \
-     'giddy==2.3.3' \
-     'inequality==1.0.0' \
-     'pointpats==2.2.0' \
-     'segregation==1.3.0' \
-     'spaghetti==1.5.0' \
-     'mgwr==2.1.1' \
-     'spglm==1.0.7' \
-     'spint==1.0.6' \
-     'spreg==1.1.1' \
-     'spvcm==0.3.0' \
-     'tobler==0.3.1' \
-     'mapclassify==2.3.0' \
-     'splot==1.1.3' \
+     'libpysal' \
+     'access' \
+     'esda' \
+     'giddy' \
+     'inequality' \
+     'pointpats' \
+     'segregation' \
+     'spaghetti' \
+     'mgwr' \
+     'spglm' \
+     'spint' \
+     'spreg' \
+     'spvcm' \
+     'tobler' \
+     'mapclassify' \
+     'momepy' \
+     'splot' \
+     'spopt' \
      ##############################
      'rasterio' \
      'rasterstats' \
