Move jupyter-book to conda, jupyter_client_server to pip

--- a/gds_py/Dockerfile
+++ b/gds_py/Dockerfile
@@ -39,8 +39,8 @@ RUN conda install --freeze-installed --yes mamba \
      'ipyleaflet' \
      'ipympl' \
      'ipywidgets' \
-     'jupyter-server-proxy' \
      'jupyter_bokeh' \
+     'jupyter-book' \
      'jupytext' \
      'legendgram' \
      'lxml' \
