--- a/gds_py/gds_py.yml
+++ b/gds_py/gds_py.yml
@@ -28,7 +28,7 @@ dependencies:
   - geocube==0.0.18
   - geopandas==0.10.2
   - geopy==2.2.0
-  - gstools==1.3.3=py39he80948d_1
+  - gstools==1.3.3
   - h3-py==3.7.3
   - hdbscan==0.8.27
   - ipyleaflet==0.14.0
