darribas/gds:7.0 built and tested

--- a/gds/Dockerfile
+++ b/gds/Dockerfile
@@ -1,5 +1,4 @@
-#FROM darribas/gds_py:6.1
-FROM gds_py:7.0
+FROM darribas/gds_py:7.0
 
 MAINTAINER Dani Arribas-Bel <D.Arribas-Bel@liverpool.ac.uk>
 
