Switch MAINTAINER to LABEL

--- a/gds_py/Dockerfile
+++ b/gds_py/Dockerfile
@@ -1,6 +1,6 @@
 FROM jupyter/minimal-notebook:2021-10-11
 
-MAINTAINER Dani Arribas-Bel <D.Arribas-Bel@liverpool.ac.uk>
+LABEL maintainer="Dani Arribas-Bel <D.Arribas-Bel@liverpool.ac.uk>"
 
 # https://github.com/ContinuumIO/docker-images/blob/master/miniconda3/Dockerfile
 ENV LANG=C.UTF-8 LC_ALL=C.UTF-8
