--- a/gds_py/gds_py.yml
+++ b/gds_py/gds_py.yml
@@ -20,6 +20,7 @@ dependencies:
   - bottleneck==1.3.2
   - cenpy==1.0.0.post4
   - clustergram==0.5.1
+  - contextily==1.2.0
   - cython==0.29.24
   - dask==2021.9.1
   - dask-ml==1.9.0
@@ -38,7 +39,7 @@ dependencies:
   - jupytext==1.11.5
   - legendgram==0.0.3
   - lxml==4.6.3
-  - momepy==0.5.0
+  - momepy==0.5.1
   - nbdime==3.1.0
   - netcdf4==1.5.7
   - networkx==2.5
