Clean versions from 7.0 ahead of 8.0 prep

--- a/gds_py/Dockerfile
+++ b/gds_py/Dockerfile
@@ -12,87 +12,87 @@ RUN conda config --add channels conda-forge \
     && conda config --set channel_priority strict \
     && mamba install --freeze-installed --yes --quiet \
      'conda-forge::blas=*=openblas' \
-     'black==21.9b0' \
-     'bokeh==2.4.1' \
-     'boto3==1.18.63' \
-     'bottleneck==1.3.2' \
-     'cenpy==1.0.0.post4' \
-     'clustergram==0.5.1' \
-     'contextily==1.2.0' \
-     'cython==0.29.24' \
-     'dask==2021.9.1' \
+     'black' \
+     'bokeh' \
+     'boto3' \
+     'bottleneck' \
+     'cenpy' \
+     'clustergram' \
+     'contextily' \
+     'cython' \
+     'dask' \
      #'dask-kubernetes' \
-     'dask-ml==1.9.0' \
-     'datashader==0.13.0' \
-     'flake8==4.0.1' \
-     'geocube==0.0.18' \
-     'geopandas==0.10.2' \
-     'geopy==2.2.0' \
-     'gstools==1.3.3' \
-     'h3-py==3.7.3' \
-     'hdbscan==0.8.27' \
-     'ipyleaflet==0.14.0' \
-     'ipympl==0.8.0' \
-     'ipywidgets==7.6.5' \
-     'jupyter_bokeh==3.0.2' \
-     'jupytext==1.11.5' \
-     'legendgram==0.0.3' \
-     'lxml==4.6.3' \
+     'dask-ml' \
+     'datashader' \
+     'flake8' \
+     'geocube' \
+     'geopandas' \
+     'geopy' \
+     'gstools' \
+     'h3-py' \
+     'hdbscan' \
+     'ipyleaflet' \
+     'ipympl' \
+     'ipywidgets' \
+     'jupyter_bokeh' \
+     'jupytext' \
+     'legendgram' \
+     'lxml' \
      #'momepy==0.5.1' \ # Moved to pip
-     'nbdime==3.1.0' \
-     'netCDF4==1.5.7' \
-     'networkx==2.5' \
-     'openpyxl==3.0.9' \
-     'osmnx==1.1.1' \
-     'palettable==3.3.0' \
-     'pandana==0.6.1' \
-     'pip==21.2.4' \
-     'polyline==1.4.0' \
-     'psycopg2==2.9.1' \
-     'pyarrow==5.0.0' \
-     'pygeos==0.10.2' \
-     'pyogrio==0.2.0' \
-     'pyppeteer==0.2.6' \
-     'pyrosm==0.6.1' \
+     'nbdime' \
+     'netCDF4' \
+     'networkx' \
+     'openpyxl' \
+     'osmnx' \
+     'palettable' \
+     'pandana' \
+     'pip' \
+     'polyline' \
+     'psycopg2' \
+     'pyarrow' \
+     'pygeos' \
+     'pyogrio' \
+     'pyppeteer' \
+     'pyrosm' \
      ##############################
      # PySAL fix for https://github.com/pysal/pysal/issues/1234
-     #'pysal==2.5' 
-     'libpysal==4.5.1' \
-     'access==1.1.3' \
-     'esda==2.4.1' \
-     'giddy==2.3.3' \
-     'inequality==1.0.0' \
-     'pointpats==2.2.0' \
-     'segregation==2.1.0' \
-     'spaghetti==1.6.4' \
-     'mgwr==2.1.2' \
-     'spglm==1.0.8' \
-     'spint==1.0.7' \
-     'spreg==1.2.4' \
-     'spvcm==0.3.0' \
-     'tobler==0.8.2' \
-     'mapclassify==2.4.3' \
-     'splot==1.1.4' \
-     'spopt==0.1.2' \
+     'pysal' \
+#    'libpysal==4.5.1' \
+#    'access==1.1.3' \
+#    'esda==2.4.1' \
+#    'giddy==2.3.3' \
+#    'inequality==1.0.0' \
+#    'pointpats==2.2.0' \
+#    'segregation==2.1.0' \
+#    'spaghetti==1.6.4' \
+#    'mgwr==2.1.2' \
+#    'spglm==1.0.8' \
+#    'spint==1.0.7' \
+#    'spreg==1.2.4' \
+#    'spvcm==0.3.0' \
+#    'tobler==0.8.2' \
+#    'mapclassify==2.4.3' \
+#    'splot==1.1.4' \
+#    'spopt==0.1.2' \
      ##############################
-     'pystac-client==0.3.0' \
-     'rasterio==1.2.8' \
-     'rasterstats==0.15.0' \
-     'rio-cogeo==3.0.0' \
-     'rioxarray==0.7.1' \
-     'scikit-image==0.18.3' \
-     'scikit-learn==1.0' \
-     'scikit-mobility==1.2.2' \
-     'seaborn==0.11.2' \
-     'spatialpandas==0.4.3' \
-     'sqlalchemy==1.4.25' \
-     'statsmodels==0.13.0' \
-     'tabulate==0.8.9' \
-     'urbanaccess==0.2.2' \
-     'xarray-spatial==0.2.7' \
-     'xarray_leaflet==0.1.15' \
-     'xlrd==2.0.1' \
-     'xlsxwriter==3.0.1' \
+     'pystac-client' \
+     'rasterio' \
+     'rasterstats' \
+     'rio-cogeo' \
+     'rioxarray' \
+     'scikit-image' \
+     'scikit-learn' \
+     'scikit-mobility' \
+     'seaborn' \
+     'spatialpandas' \
+     'sqlalchemy' \
+     'statsmodels' \
+     'tabulate' \
+     'urbanaccess' \
+     'xarray-spatial' \
+     'xarray_leaflet' \
+     'xlrd' \
+     'xlsxwriter' \
  && conda clean --all --yes --force-pkgs-dirs \
  && find /opt/conda/ -follow -type f -name '*.a' -delete \
  && find /opt/conda/ -follow -type f -name '*.pyc' -delete \
