--- a/.github/workflows/test_python_environment.yml
+++ b/.github/workflows/test_python_environment.yml
@@ -12,6 +12,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
+        arch: [x86_64, arm64]
 
     steps:
       - uses: actions/checkout@v2
@@ -30,6 +31,7 @@ jobs:
           conda env create -f gds_py/gds_py.yml
           conda activate gds
           pip install --user -r gds_py/gds_py_pip.txt
+
       - name: Check and Log Environment
         shell: bash -l {0}
         run: |
@@ -44,3 +46,23 @@ jobs:
         run: |
           conda activate gds
           jupyter nbconvert --to html --execute gds_py/check_py_stack.ipynb
+
+      - name: Write Explicit Stack
+        shell: bash -l {0}
+        continue-on-error: false
+        run: |
+          conda activate gds
+          conda list --explicit gds_py/gds_py_explicit_{{ matrix.os }}_{{ matrix.arch }}.txt
+
+      - name: Commit file
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add gds_py/gds_py_explicit_{{ matrix.os }}_{{ matrix.arch }}.txt
+          git commit -m "Update explicit {{ matrix.os }} file" --allow-empty
+
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          force: true
